# flow-mint

./: README.md
flow_mint/: __init__.py  cli.py  config.yaml  pyproject.toml
flow_mint/advisor/: suggest.py
flow_mint/analyzer/: flow.py  trends.py
flow_mint/categorizer/: ai.py  domains.py
flow_mint/parser/: __init__.py  base.py  converter.py  cub.py  hdfc.py
flow_mint/storage/: store.py
flow_mint/utils/: __init__.py  config.py
notebooks/: starter.ipynb
